--- a/Resume.html
+++ b/Resume.html
@@ -10,12 +10,14 @@
   <h3>Job Title : &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Full Stack Developer</h3>
   <h3>Contact Information : </h3>
  <h3>Email : &nbsp;&nbsp;&nbsp;&nbsp;sindhushachodagam689@gmail.com</h3>
- <h3>Phone : &nbsp;&nbsp;&nbsp;&nbsp;9398001574</h3>
+ <h3>Phone : &nbsp;&nbsp;&nbsp;&nbsp;+91-XXXXXXXXXX</h3>
  <h3>LinkedIn : https://www.linkedin.com/in/chodagam-gnana-venkata-sindhusha-38274032b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app</h3>
  <h3>GitHub : https://github.com/ChodagamGnanaVenkataSindhusha/webdeveloper</h3>
     </body>
-    <h2 style="color:violet"><i><u>SUMMARY / ABOUT ME</u></i></h2>
-<p><h3>I am a motivated and skilled Full Stack Developer with a strong passion for web development.I have hands-on experience in building user-friendly and responsive websites using HTML, CSS, and JavaScript. I am committed to continuous learning and delivering high-quality work.</h3></p>
+    <h2 style="color:violet"><i><u>ABOUT ME</u></i></h2>
+<p><h3><ul><li>I am a motivated and skilled Full Stack Developer with a strong passion for <mark>web development</mark>.</li>
+    <li> have hands-on experience in building user-friendly and responsive websites using HTML, CSS, and JavaScript.</li>
+   <li> I am committed to continuous learning and delivering high-quality work.</li></h3></p>
 <h2 style="color:violet"><i><u>EDUCATION</u></i></h2>
 <table bgcolor:"black" border="5px">
 <tr bgcolor:"skyblue" align="center">
@@ -81,8 +83,16 @@
 <li>Team work and Collaboration</li>
 </ul>
 <h2 style="color:violet"><i><u>FOOTER</u></i></h2>
-    <ul>CERTIFICATIONS:</ul>
+    <h3>CERTIFICATIONS:</h3>
+    <ul>
 <li>Python programming-BIST Technologies (2025)</li>
-<li>Bulid Your First Chatboot IBM SkillBuild </li>
+<li>Bulid Your First Chatboot-IBM SkillBuild(2025)</li>
     <li>Ceritifed <mark>ELITE</mark> in  Programming in Java - NPTEL(July- October 2024)</li>
+<li>Software Engineering and Agile software development-InfosysSpringBoard(2024)  </li></ul>
+<h3>ACHIEVEMENTS:</h3>
+<ul>
+    <li>Completed 3 Internships -EduSkills Academy</li>
+    <li>Secured High CGPA 5th semister</li>
+    <li>Student Member in ISTE(from 2025-2027)</li>
+</ul>
 </html>
